--- a/index.html
+++ b/index.html
@@ -84,15 +84,15 @@
                             <span>Type of Plan</span>
                             <div class="radio-container">
                                 <div>
-                                    <input type="radio" name="type-of-plan" value="Employer" checked />
+                                    <input type="radio" name="type-of-plan-A" value="Employer" checked />
                                     <label>Employer</label>
                                   </div>
                                   <div>
-                                    <input type="radio" name="type-of-plan" value="Marketplace" checked />
+                                    <input type="radio" name="type-of-plan-A" value="Marketplace" checked />
                                     <label>Marketplace</label>
                                   </div>
                                   <div>
-                                    <input type="radio" name="type-of-plan" value="Other" checked />
+                                    <input type="radio" name="type-of-plan-A" value="Other" checked />
                                     <label>Other</label>
                                   </div>
                             </div>
@@ -101,15 +101,15 @@
                             <span>Plan Type</span>
                             <div class="radio-container">
                                 <div>
-                                    <input type="radio" name="plan-type" value="HMO" checked />
+                                    <input type="radio" name="plan-type-A" value="HMO" checked />
                                     <label>HMO</label>
                                   </div>
                                   <div>
-                                    <input type="radio" name="plan-type" value="PPO" checked />
+                                    <input type="radio" name="plan-type-A" value="PPO" checked />
                                     <label>PPO</label>
                                   </div>
                                   <div>
-                                    <input type="radio" name="plan-type" value="EPO/Other" checked />
+                                    <input type="radio" name="plan-type-A" value="EPO/Other" checked />
                                     <label>EPO/Other</label>
                                   </div>
                             </div>
@@ -126,11 +126,11 @@
                             <span>Is my primary care physician in the plans's network?</span>
                             <div>
                                 <div>
-                                    <input type="radio" name="primary-care-physician" value="Yes" checked />
+                                    <input type="radio" name="primary-care-physician-A" value="Yes" checked />
                                     <label>Yes</label>
                                   </div>
                                   <div>
-                                    <input type="radio" name="primary-care-physician" value="No" checked />
+                                    <input type="radio" name="primary-care-physician-A" value="No" checked />
                                     <label>No</label>
                                   </div>
                             </div>
@@ -139,11 +139,11 @@
                             <span>Are my hospitals and specialists(e.g., oncologist, surgeon, etc.)in the plan's network?</span>
                             <div class="radio-container">
                                 <div>
-                                    <input type="radio" name="primary-care-physician" value="Yes" checked />
+                                    <input type="radio" name="plan-network-A" value="Yes" checked />
                                     <label>Yes</label>
                                   </div>
                                   <div>
-                                    <input type="radio" name="primary-care-physician" value="No" checked />
+                                    <input type="radio" name="plan-network-A" value="No" checked />
                                     <label>No</label>
                                   </div>
                             </div>
@@ -152,15 +152,15 @@
                             <span>Are the prescription drugs I take covered by the plan?</span>
                             <div class="radio-container">
                                 <div>
-                                    <input type="radio" name="primary-care-physician" value="Yes" checked />
+                                    <input type="radio" name="prescription-rx-covered-A" value="Yes" checked />
                                     <label>Yes</label>
                                   </div>
                                   <div>
-                                    <input type="radio" name="primary-care-physician" value="No" checked />
+                                    <input type="radio" name="prescription-rx-covered-A" value="No" checked />
                                     <label>No</label>
                                   </div>
                                   <div>
-                                    <input type="radio" name="primary-care-physician" value="No" checked />
+                                    <input type="radio" name="prescription-rx-covered-A" value="No" checked />
                                     <label>Only Some</label>
                                   </div>
                             </div>
@@ -179,15 +179,15 @@
                                 <span>Type of Plan</span>
                                 <div class="radio-container">
                                     <div>
-                                        <input type="radio" name="type-of-plan" value="Employer" checked />
+                                        <input type="radio" name="type-of-plan-B" value="Employer" checked />
                                         <label>Employer</label>
                                       </div>
                                       <div>
-                                        <input type="radio" name="type-of-plan" value="Marketplace" checked />
+                                        <input type="radio" name="type-of-plan-B" value="Marketplace" checked />
                                         <label>Marketplace</label>
                                       </div>
                                       <div>
-                                        <input type="radio" name="type-of-plan" value="Other" checked />
+                                        <input type="radio" name="type-of-plan-B" value="Other" checked />
                                         <label>Other</label>
                                       </div>
                                 </div>
@@ -196,15 +196,15 @@
                                 <span>Plan Type</span>
                                 <div class="radio-container">
                                     <div>
-                                        <input type="radio" name="plan-type" value="HMO" checked />
+                                        <input type="radio" name="plan-type-B" value="HMO" checked />
                                         <label>HMO</label>
                                       </div>
                                       <div>
-                                        <input type="radio" name="plan-type" value="PPO" checked />
+                                        <input type="radio" name="plan-type-B" value="PPO" checked />
                                         <label>PPO</label>
                                       </div>
                                       <div>
-                                        <input type="radio" name="plan-type" value="EPO/Other" checked />
+                                        <input type="radio" name="plan-type-B" value="EPO/Other" checked />
                                         <label>EPO/Other</label>
                                       </div>
                                 </div>
@@ -221,11 +221,11 @@
                                 <span>Is my primary care physician in the plans's network?</span>
                                 <div>
                                     <div>
-                                        <input type="radio" name="primary-care-physician" value="Yes" checked />
+                                        <input type="radio" name="primary-care-physician-B" value="Yes" checked />
                                         <label>Yes</label>
                                       </div>
                                       <div>
-                                        <input type="radio" name="primary-care-physician" value="No" checked />
+                                        <input type="radio" name="primary-care-physician-B" value="No" checked />
                                         <label>No</label>
                                       </div>
                                 </div>
@@ -234,11 +234,11 @@
                                 <span>Are my hospitals and specialists(e.g., oncologist, surgeon, etc.)in the plan's network?</span>
                                 <div class="radio-container">
                                     <div>
-                                        <input type="radio" name="primary-care-physician" value="Yes" checked />
+                                        <input type="radio" name="plan-network-B" value="Yes" checked />
                                         <label>Yes</label>
                                       </div>
                                       <div>
-                                        <input type="radio" name="primary-care-physician" value="No" checked />
+                                        <input type="radio" name="plan-network-B" value="No" checked />
                                         <label>No</label>
                                       </div>
                                 </div>
@@ -247,15 +247,15 @@
                                 <span>Are the prescription drugs I take covered by the plan?</span>
                                 <div class="radio-container">
                                     <div>
-                                        <input type="radio" name="primary-care-physician" value="Yes" checked />
+                                        <input type="radio" name="prescription-rx-covered-B" value="Yes" checked />
                                         <label>Yes</label>
                                       </div>
                                       <div>
-                                        <input type="radio" name="primary-care-physician" value="No" checked />
+                                        <input type="radio" name="prescription-rx-covered-B" value="No" checked />
                                         <label>No</label>
                                       </div>
                                       <div>
-                                        <input type="radio" name="primary-care-physician" value="No" checked />
+                                        <input type="radio" name="prescription-rx-covered-B" value="No" checked />
                                         <label>Only Some</label>
                                       </div>
                                 </div>
@@ -531,11 +531,11 @@
 
 
     function calculateTotalCost(option) {
-        const monthlyPremium = parseFloat(document.getElementById(`A_${option}`).value) || 0;
-        const deductible = parseFloat(document.getElementById(`B_${option}`).value) || 0;
-        const oopMax = parseFloat(document.getElementById(`C_${option}`).value) || 0;
-        const rxDeductible = parseFloat(document.getElementById(`D_${option}`).value) || 0;
-        const rxOopMax = parseFloat(document.getElementById(`E_${option}`).value) || 0;
+        const monthlyPremium = parseFormattedNumber(document.getElementById(`A_${option}`).value) || 0;
+        const deductible = parseFormattedNumber(document.getElementById(`B_${option}`).value) || 0;
+        const oopMax = parseFormattedNumber(document.getElementById(`C_${option}`).value) || 0;
+        const rxDeductible = parseFormattedNumber(document.getElementById(`D_${option}`).value) || 0;
+        const rxOopMax = parseFormattedNumber(document.getElementById(`E_${option}`).value) || 0;
 
         // Annual premium
         const annualPremium = monthlyPremium * 12;
@@ -543,24 +543,24 @@
         let totalCost = 0;
 
         // Case 1: Integrated deductible and OOP max
-        if (rxDeductible === 0 && rxOopMax === 0) {
-            totalCost = annualPremium + oopMax;
+        if (deductible === 0 && rxOopMax === 0) {
+            totalCost = annualPremium + oopMax ;
         }
         // Case 2: Separate deductible but shared OOP max
-        else if (rxDeductible > 0 && rxOopMax === 0) {
-            totalCost = annualPremium + oopMax;
+        else if (deductible > 0 && rxOopMax === 0) {
+            totalCost = annualPremium + deductible + oopMax;
         }
         // Case 3: Separate deductible and separate OOP max
-        else if (rxDeductible > 0 && rxOopMax > 0) {
+        else if (deductible > 0 && rxDeductible > 0 && rxOopMax > 0) {
             // We assume the person hits both OOP maximums
-            totalCost = annualPremium + oopMax + rxOopMax;
+            totalCost = annualPremium + deductible + oopMax + rxDeductible + rxOopMax;
         }
         else {
             totalCost = annualPremium + oopMax; // fallback
         }
 
         document.getElementById(`result${option}`).innerText = `Total Out-of-Pocket Cost for Option #${option}: $${totalCost.toFixed(2)}`;
-    }
+    } 
 
     function calculateOption1() {
         calculateTotalCost(1);
