--- a/index.html
+++ b/index.html
@@ -71,12 +71,12 @@
             border-radius: 0px 0px 10px 10px;
         }
 
-        .green-bar {
-            background-color: #1b823f;
+        .blue-background {
+            background-color: #0066cc;
         }
 
-        .orange-bar {
-            background-color: #f0821e;
+        .yellow-background {
+            background-color: #ffcc33;
         }
 
     </style>
@@ -182,13 +182,13 @@
                                     <div class="card">
                                       <p class="card-title orange">Initial Mortgage Balance</p>
                                       <p class="card-value" id="out_1">$150,000</p>
-                                      <div class="card-bar green-bar"></div>
+                                      <div class="card-bar blue-background"></div>
                                     </div>
                                   
                                     <div class="card">
                                       <p class="card-title orange">Monthly Mortgage Payment</p>
                                       <p class="card-value" id="out_2">$805.23</p>
-                                      <div class="card-bar orange-bar"></div>
+                                      <div class="card-bar yellow-background"></div>
                                     </div>
                                   </div>
                                   <!-- Chart -->
